--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mssql": "^9.3.2",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "tedious": "^16.4.0",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
