--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "exceljs": "^4.3.0",
     "mssql": "^9.3.2",
+    "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "tedious": "^16.4.0",
