--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "ejs": "^3.1.9",
     "exceljs": "^4.3.0",
     "mssql": "^9.3.2",
     "multer": "^1.4.5-lts.1",
